Dodana kolejna linia

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body>
-        Hello, world!
+        Cześć, świecie!
+        Tu jest ten nowy feature!
     </body>
 </html>
