--- a/Pierwsza_strona.html
+++ b/Pierwsza_strona.html
@@ -65,6 +65,8 @@
         	<li>CSS</li>
         	<li>JAVASCRIPT</li>
         </div>
+        <a href="hello.html">Pierwszy link</a>
 
+      
     </body>
 </html>
