--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,17 @@
         </title>
     </head>
     <body>
-        Cześć, świecie!
-        Tu jest ten nowy feature!
+        <h2>Przykładowa tablica</h2>
+        <ul>
+        	<li><a href="#jack">Jack O'Neill</a></li>
+        	<li><a href="#daniel">Daniel Jackson</a></li>
+        	<li><a href="#samantha">Samantha Carter</a></li>
+        </ul>
+        <h2 id="jack">Jack O'Neill</h2>
+        <p>Jack O'Neill is a USAF colonel who led the original mission through the Stargate in Stargate. He is played by Kurt Russell in the film, and by former MacGyver actor Richard Dean Anderson in a regular role in seasons 1–8, and in a recurring role in seasons 9–10</p>
+        <h2 id="daniel">Daniel Jackson</h2>
+        <p>Dr. Daniel Jackson is a brilliant archaeologist and linguist, specializing in Egyptology, whose unusual theories concerning the origin of the Egyptian Pyramids led to his participation in the original mission through the stargate in Stargate. He is played by James Spader in the film and by Michael Shanks in a regular role in seasons 1–5 and 7–10, with a recurring role in season 6. He also appears in both direct-to-DVD films and in seasons 1 and 5 of Stargate Atlantis</p>
+        <h2 id="samantha">Samantha Carter</h2>
+        <p>Samantha "Sam" Carter is an astrophysicist and USAF captain (later major, lieutenant colonel, colonel, then brigadier general). She is played by Amanda Tapping in a regular role in seasons 1–10, in both direct-to-DVD films and makes an appearance in all seasons of Stargate Atlantis.</p>
     </body>
 </html>
