--- a/gwiezdne_wrota.html
+++ b/gwiezdne_wrota.html
@@ -10,7 +10,7 @@
     	<ol>
     		<li><a href="#">SG-1</a>
     			<ul>
-    				<li><a href="">Odcinki</a></li>
+    				<li><a href="#">Odcinki</a></li>
     				<li><a href="#">Filmy</a></li>
     				<li><a href="#">Książki</a></li>
     				<li><a href="#">Komiksy</a></li>
